Added the QR code data model to database

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,3 +1,27 @@
-# This file stores configurations for your Shopify app.
+# Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
+name = "anitas-remix-app"
+client_id = "a3f7ecbeae8f94831d5956fd1ae17f33"
+application_url = "https://suspected-obtaining-lambda-auction.trycloudflare.com"
+embedded = true
+
+[access_scopes]
+# Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "write_products"
+
+[auth]
+redirect_urls = [
+  "https://suspected-obtaining-lambda-auction.trycloudflare.com/auth/callback",
+  "https://suspected-obtaining-lambda-auction.trycloudflare.com/auth/shopify/callback",
+  "https://suspected-obtaining-lambda-auction.trycloudflare.com/api/auth/callback"
+]
+
+[webhooks]
+api_version = "2023-07"
+
+[pos]
+embedded = false
+
+[build]
+automatically_update_urls_on_dev = true
+dev_store_url = "anitas-bookstore.myshopify.com"
